@@ -1,3 +1,8 @@
+2008-04-16  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/35932
+	* gfortran.dg/intrinsic_char_1.f90: New test.
+
 2008-04-16  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c/35739
